--- a/msoft_PickMeUp/msoft_PickMeUp.vcxproj.filters
+++ b/msoft_PickMeUp/msoft_PickMeUp.vcxproj.filters
@@ -52,6 +52,9 @@
     <ClCompile Include="mainwindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Navigation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="mainwindow.h">
@@ -68,5 +71,13 @@
     <ClInclude Include="AutomatController.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Navigation.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\..\..\Pictures\Screenshots\map.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
